<resources>
    <string name="app_name">CamTools</string>
    <string name="aboutLibraries_description_text">A calculator for photographers.</string>
    <string name="title_sky_short">Sky</string>
    <string name="title_sky_long">Sky</string>
    <string name="title_exposure_short">Exposure</string>
    <string name="title_exposure_long">Exposure time</string>
    <string name="title_focus_short">Focus</string>
    <string name="title_focus_long">Focus</string>
    <string name="title_tools_short">Tools</string>
    <string name="title_tools_long">Tools</string>
    <string name="title_timelapse_short">Timelapse</string>
    <string name="title_timelapse_long">Timelapse</string>
    <string name="title_settings_short">Settings</string>
    <string name="title_settings_long">Settings</string>
    <string name="overflow_description">More options…</string>
    <string name="select_hyper">Hyperfocal</string>
    <string name="description_hyper">Set the focus at this distance so that the DoF reaches to infinity.</string>
    <string name="shortcut_focus_hyper">Hyperfocal</string>
    <string name="select_limits">DoF</string>
    <string name="description_limits">Calculate which range will be sharp at a given focus point.</string>
    <string name="shortcut_focus_limits">Depth of field</string>
    <string name="select_reverse">Reverse</string>
    <string name="description_reverse">Calculate the needed aperture for a given depth of field.</string>
    <string name="shortcut_focus_reverse">Focus</string>
    <string name="select_nd">ND filter</string>
    <string name="description_nd">Use a neutral density filter to extend the exposure time.</string>
    <string name="shortcut_exposure_nd">ND filter</string>
    <string name="select_stars">Stars</string>
    <string name="description_stars">Calculate the maximum exposure time at which stars are shown as points.</string>
    <string name="shortcut_exposure_spotstars">Stars</string>
    <string name="select_startrails">Startrails</string>
    <string name="description_startrails">Calculate the exposure time for a specific rotation of stars.</string>
    <string name="shortcut_exposure_startrails">Startrails</string>
    <string name="select_sky_overview">Overview</string>
    <string name="description_sky_overview">An Overview with important times for sun and moon.</string>
    <string name="shortcut_sky_overview">Sky events</string>
    <string name="select_sky_details">Details</string>
    <string name="description_sky_details">All details about the sky.</string>
    <string name="shortcut_sky_details">Sky</string>
    <string name="select_sky_ar">Augmented Reality</string>
    <string name="description_sky_ar">See where the sun and moon will be in real life.</string>
    <string name="shortcut_sky_ar">Sky AR</string>
    <string name="select_lightpollution">Light pollution</string>
    <string name="description_lightpollution">Explore where you can take the best night-time images.</string>
    <string name="shortcut_sky_lightpollution">Light pollution</string>
    <string name="select_contrast">Contrasts (Beta)</string>
    <string name="description_contrast">Use contrasting colors to make your images look more interesting.</string>
    <string name="shortcut_contrast">Contrasts</string>
    <string name="select_cropfactor">Crop factor adjustment</string>
    <string name="description_cropfactor">See how a full-frame lens will look on a sensor cropped sensor.</string>
    <string name="shortcut_cropfactor">Crop factor</string>
    <string name="select_exif">Read EXIF data</string>
    <string name="description_exif">Show all the information that your camera saved with the image.</string>
    <string name="shortcut_exif">Exif reader</string>
    <string name="settings">Settings</string>
    <string name="setting_enable">Enable</string>
    <string name="setting_disable">Disable</string>
    <string name="setting_change">Change</string>
    <string name="setting_darkmode_title">Dark theme</string>
    <string name="setting_darkmode_description">Use the dark theme to protect your eyes.</string>
    <string name="setting_darkmode_follow_system">Follow the system</string>
    <string name="setting_units_title">Units</string>
    <string name="setting_units_aperture">f-stops</string>
    <string name="setting_units_aperture_short">Aperture</string>
    <string name="setting_units_aperture_full">Full stops</string>
    <string name="setting_units_aperture_half">Half stops</string>
    <string name="setting_units_aperture_third">Third stops</string>
    <string name="setting_units_aperture_full_short">Full stops</string>
    <string name="setting_units_aperture_half_short">Halfs</string>
    <string name="setting_units_aperture_third_short">Thirds</string>
    <string name="setting_units_distance">Distance</string>
    <string name="setting_units_distance_metrical">Metrical</string>
    <string name="setting_units_distance_empirical">Empirical</string>
    <string name="setting_units_nd">Neutral density</string>
    <string name="setting_units_nd_times">Factor</string>
    <string name="setting_units_nd_stops">Stops</string>
    <string name="setting_sensor_size">Sensor size</string>
    <string name="setting_cameras_title">Your cameras</string>
    <string name="setting_cameras_description">Add your cameras for more precise results.\nYou currently have %s.</string>
    <string name="setting_cameras_edit">Edit</string>
    <string name="seeting_cameras_new_accessibilitytext">Add camera or close menu</string>
    <string name="setting_cameras_new_database">From database</string>
    <string name="setting_cameras_new_custom">Custom</string>
    <string name="setting_cameras_new_custom_title">Add a camera</string>
    <string name="setting_cameras_edit_custom_title">Edit this camera</string>
    <string name="setting_cameras_icon_choose">Choose an icon</string>
    <string name="camera_icon_photo">DSLR</string>
    <string name="camera_icon_shutter">Shutter</string>
    <string name="camera_icon_video">Video camera</string>
    <string name="camera_icon_phone">Phone</string>
    <string name="setting_cameras_sensorsize">Sensor size (mm)</string>
    <string name="setting_cameras_resolution">Image resolution (px)</string>
    <string name="setting_cameras_coc">Circle of confusion (mm)</string>
    <string name="setting_cameras_added_camera">Added %s</string>
    <string name="setting_cameras_added_error">Could not add camera</string>
    <string name="setting_cameras_deleted">Deleted %s</string>
    <string name="settings_cam_coc">Circle of confusion</string>
    <string name="settings_nd_strengthunit">Density unit</string>
    <string name="settings_nd_strengthunit_dialog">Optical density unit</string>
    <string name="settings_nd_strengthunit_stops">F-stops</string>
    <string name="settings_nd_strengthunit_times">Filter factor</string>
    <string name="settings_nd_timelimits">Time limits</string>
    <string name="settings_nd_strengthlimits">Strength limits</string>
    <string name="appearance_appearance">Appearance</string>
    <string name="appearance_darkmode">Dark theme</string>
    <string name="appearance_color">Colors</string>
    <string name="appearance_navbar">Bottom navigation</string>
    <string name="appearance_labels">Navigation labels</string>
    <string name="appearance_singlehand">Single-handed mode</string>
    <string name="appearance_swipe">Swipe between tabs</string>
    <string name="appearance_save">Save last tab</string>
    <string name="appearance_customColors">Custom colors</string>
    <string name="about_about">About</string>
    <string name="about_rate">Rate / Send feedback</string>
    <string name="about_me">About me</string>
    <string name="about_app">About this app</string>
    <string name="more_expand">Expand</string>
    <string name="more_expanded">Collapse</string>
    <string name="fallback_colorparse">Falling back to at least one standard color. Make sure to have entered a valid color code.</string>
    <string name="camera_default_name">Default</string>
    <string name="camera_default">
        {"mName":"Default",
        "mResolutionX":6000,
        "mResolutionY":4000,
        "mSensorSizeX":36,
        "mSensorSizeY":24,
        "mCropfactor":1,
        "mPixelpitch":6.6,
        "mConfusion":0.03}
    </string>
    <string name="calculate_camera">Camera: %s</string>
    <string name="calculate_camera_add">Add your camera</string>
    <string name="calculate_camera_choose">Choose your camera</string>
    <string name="calculate_camera_manage">Manage</string>
    <string name="calculate_timer_start">Start timer</string>
    <string name="calculate_equations">How to calculate</string>
    <string name="calculate_color_choose">Choose a color</string>
    <string name="calculate_color_mode">Contrast: %s</string>
    <string name="calculate_color_mode_choose">Contrast mode</string>
    <string name="calculate_color_mode_complementary">Complementary</string>
    <string name="calculate_color_mode_triadic">Triadic</string>
    <string name="calculate_color_mode_warmth">Warmth</string>
    <string name="calculate_color_mode_brightness">Brightness</string>
    <string name="title_activity_custom">Custom Colors</string>
    <string name="custom_light_lighter">Lighter light (cards, navbar, etc)</string>
    <string name="custom_light_normal">Normal light (mainly backgrounds)</string>
    <string name="custom_light_darker">Darker light (no use yet)</string>
    <string name="custom_dark_lighter">Lighter dark (mainly backgrounds)</string>
    <string name="custom_dark_normal">Normal dark (cards, navbar, etc)</string>
    <string name="custom_dark_darker">Darker dark (no use yet)</string>
    <string name="custom_tab_sun">Sun tab accent color</string>
    <string name="custom_tab_stars">Stars tab accent color</string>
    <string name="custom_tab_focus">Focus tab accent color</string>
    <string name="custom_tab_nd">ND tab accent color</string>
    <string name="custom_tab_settings">Settings tab accent color</string>
    <string name="custom_tab_timelapse">Timelapse tab accent color</string>
    <string name="custom_text_main_light">Main text (light mode)</string>
    <string name="custom_text_sub_light">Subtext (light mode)</string>
    <string name="custom_text_main_dark">Main text (dark mode)</string>
    <string name="custom_text_sub_dark">Subtext (dark mode)</string>
    <string name="sun_mode_details">Details</string>
    <string name="sun_mode_ar">AR</string>
    <string name="sun_details_night">Nighttime</string>
    <string name="sun_details_astronomical">Astronomical twilight</string>
    <string name="sun_details_nautical">Nautical twilight</string>
    <string name="sun_details_bluehour">Blue hour</string>
    <string name="sun_details_goldenhour">Golden hour</string>
    <string name="sun_details_sunrise">Sunrise</string>
    <string name="sun_details_day">Daytime</string>
    <string name="sun_details_noon">Solar noon</string>
    <string name="sun_details_sunset">Sunset</string>
    <string name="sun_details_morning">Morning</string>
    <string name="sun_details_morning_description_astronomical">Nighttime ends</string>
    <string name="sun_details_morning_description_nautical">Astronomical twilight ends</string>
    <string name="sun_details_morning_description_bluehour">Nautical twilight ends&lt;br /&gt;Civil twilight begins</string>
    <string name="sun_details_morning_description_goldenhour">Blue hour ends</string>
    <string name="dimensions_separator" translatable="false">x</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="use_next">Use</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="preset_choose">Choose a preset</string>
</resources>