<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    android:theme="@style/AppTheme"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_cameras_new_custom_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/iconImageButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/setting_cameras_icon_choose"
            android:tint="@color/textColor_normal"
            app:srcCompat="@drawable/camera_photo"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text|textAutoComplete"
            android:singleLine="true"
            android:text=""
            tools:targetApi="o"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:labelFor="@id/resolutionXEditText"
            android:text="@string/setting_cameras_resolution"/>

        <TextView
            android:id="@+id/resolutionPresetTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/preset_choose"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/resolutionXEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text=""
            android:importantForAutofill="no"
            tools:targetApi="o"/>

        <TextView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dimensions_separator"/>

        <EditText
            android:id="@+id/resolutionYEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text=""
            android:importantForAutofill="no"
            tools:ignore="LabelFor"
            tools:targetApi="o"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:labelFor="@id/sensorsizeXEditText"
            android:text="@string/setting_cameras_sensorsize"/>

        <TextView
            android:id="@+id/sensorsizePresetTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/preset_choose"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sensorsizeXEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text=""
            tools:targetApi="o"/>

        <TextView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dimensions_separator"
            />

        <EditText
            android:id="@+id/sensorsizeYEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text=""
            tools:ignore="LabelFor"
            tools:targetApi="o"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cocLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/cocEditText"
        android:text="@string/setting_cameras_coc"/>

    <EditText
        android:id="@+id/cocEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="@android:style/Widget.Material.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/saveButton"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimaryInverse"
            tools:targetApi="m"/>
    </LinearLayout>
</LinearLayout>