<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColor_secondary"
        android:text="@string/setting_cameras_icon_choose"/>

    <TextView
        android:id="@+id/photoTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/camera_photo"
        android:drawablePadding="16dp"
        android:drawableTint="@color/textColor_secondary"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/camera_icon_photo"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/textColor_normal"
        tools:targetApi="m"/>

    <TextView
        android:id="@+id/shutterTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/camera_shutter"
        android:drawablePadding="16dp"
        android:drawableTint="@color/textColor_secondary"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/camera_icon_shutter"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/textColor_normal"
        tools:targetApi="m"/>

    <TextView
        android:id="@+id/videoTextView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/camera_video"
        android:drawablePadding="16dp"
        android:drawableTint="@color/textColor_secondary"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:text="@string/camera_icon_video"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/textColor_normal"
        tools:targetApi="m"/>

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/camera_phone"
        android:drawablePadding="16dp"
        android:drawableTint="@color/textColor_secondary"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:text="@string/camera_icon_phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/textColor_normal"
        tools:targetApi="m"/>

</LinearLayout>